--- a/OneDumper/packages.config
+++ b/OneDumper/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ByteSize" version="1.3.0" targetFramework="net461" />
+  <package id="BouncyCastle" version="1.8.2" targetFramework="net471" />
+  <package id="ByteSize" version="1.3.0" targetFramework="net471" />
   <package id="Costura.Fody" version="3.1.0" targetFramework="net461" />
   <package id="Fody" version="3.1.4" targetFramework="net471" developmentDependency="true" />
-  <package id="Inferno" version="1.5.1" targetFramework="net471" />
   <package id="MaterialSkin" version="0.2.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="Octokit" version="0.31.0" targetFramework="net471" />
